crates/etl-api/tests/snapshots/main__destinations_pipelines__an_existing_bigquery_destination_and_pipeline_can_be_updated.snap
---
source: crates/etl-api/tests/destinations_pipelines.rs
expression: response.config
---
BigQuery {
    project_id: "project-id-updated",
    dataset_id: "dataset-id-updated",
    max_staleness_mins: Some(
        10,
    ),
    connection_pool_size: Some(
        1,
    ),
}
