crates/etl-api/tests/snapshots/main__destinations_pipelines__an_existing_iceberg_supabase_destination_and_pipeline_can_be_updated-2.snap
---
source: crates/etl-api/tests/destinations_pipelines.rs
assertion_line: 448
expression: response.config
---
ApiPipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        BatchConfig {
            max_fill_ms: 10,
            memory_budget_ratio: 0.2,
            max_bytes: 8388608,
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    table_error_retry_max_attempts: Some(
        10,
    ),
    max_table_sync_workers: Some(
        4,
    ),
    max_copy_connections_per_table: Some(
        8,
    ),
    memory_refresh_interval_ms: Some(
        100,
    ),
    table_sync_monitor_refresh_interval_ms: Some(
        10000,
    ),
    memory_backpressure: Some(
        MemoryBackpressureConfig {
            activate_threshold: 0.85,
            resume_threshold: 0.75,
        },
    ),
    table_sync_copy: Some(
        IncludeAllTables,
    ),
    invalidated_slot_behavior: Some(
        Error,
    ),
    replicator_resources: None,
    ducklake_maintenance: None,
    log_level: Some(
        Info,
    ),
}
