crates/etl-api/tests/snapshots/main__destinations_pipelines__an_existing_iceberg_supabase_destination_and_pipeline_can_be_updated.snap
---
source: crates/etl-api/tests/destinations_pipelines.rs
expression: response.config
---
Iceberg {
    config: Supabase {
        project_ref: "tsrqponmlkjihgfedcba",
        warehouse_name: "my-updated-warehouse",
        namespace: Some(
            "my-updated-namespace",
        ),
        s3_region: "us-west-2",
    },
}
